@@ -50,7 +50,7 @@ Backup all important data before!
 If you do not wish to make the modules dynamically loadable, but
 build a static libpam including all PAM modules, you have to call:
 
-      ./configure --enable-static-modules
+      ./configure --enable-static-modules --disable-pie
 
 In this case you cannot use pam_unix in the PAM config files instead you
 have to use pam_unix_acct, pam_unix_auth, pam_unix_passwd and
