@@ -1,3 +1,12 @@
+2008-02-04  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* libpam/pam_static_modules.h: Add _pam_sepermit_modstruct.
+	* modules/pam_sepermit/pam_sepermit.c: Fix typo.
+
+	* README: Add --disable-pie to configure options for static library.
+
+	* doc/man/Makefile.am: Fix building outside of src directory.
+
 2008-02-01  Tomas Mraz  <t8m@centrum.cz>
 
 	* modules/pam_namespace/namespace.conf.5.xml: Add documentation for
